Increase bottom padding to ensure last row visibility (debug_81)

--- a/css/style.css
+++ b/css/style.css
@@ -715,7 +715,7 @@ body {
         -webkit-overflow-scrolling: touch;
         position: relative;
         width: 100vw;
-        padding-bottom: 70px;
+        padding-bottom: 180px;
         touch-action: manipulation;
         /* Allow Pan + Zoom (Pinch) */
         /* Padding top removed as info bar is now naturally stacked */
@@ -723,7 +723,7 @@ body {
 
     #table-wrapper {
         min-height: auto;
-        padding-bottom: 75px;
+        padding-bottom: 100px;
         /* Scroll Fix */
         touch-action: manipulation;
         /* Allow Pan + Zoom (Pinch) */
